<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">防打扰</string>
    <string name="firewall_settings_tab_title">拦截规则</string>
    <string name="black_white_list_tab_title">黑白名单</string>
    <string name="call_log_tab_title">来电</string>
    <string name="mms_log_tab_title">短信</string>
    <string name="fw_blacklist">黑名单</string>
    <string name="fw_whitelist">白名单</string>
    <string name="enable_firewall">开启拦截</string>
    <string name="fw_pattern_settings">拦截对象</string>
    <string name="fw_action_settings">拦截后操作</string>
    <string name="fw_time_settings">拦截时间</string>
    <string name="fw_start_time">起始时间</string>
    <string name="fw_end_time">结束时间</string>
    <string name="fw_all_day">全天拦截</string>
    <string name="fw_period">指定拦截时间</string>
    <string name="fw_advanced_settings">高级拦截</string>
    <string name="anti_stranger_title">拦截骚扰电话</string>
    <string name="anti_stranger_summary">陌生人来电第一声响铃静音</string>
    <string name="anti_private_title">拦截空号码来电</string>
    <string name="anti_private_summary">拦截私人号码等空号码来电</string>
    <string name="fw_keyword_filter">过滤垃圾短信</string>
    <string name="fw_keyword_filter_summary">根据关键词过滤陌生人短信</string>
    <string name="fw_set_keyword">设置过滤关键词</string>
    <string name="fw_notification_settings">通知和其它</string>
    <string name="show_firewall_notification">常驻图标</string>
    <string name="show_notification">拦截通知</string>
    <string name="opt_reject_blacklist">拦截黑名单里的人</string>
    <string name="opt_reject_blacklist_stranger">拦截不在通信录里的人</string>
    <string name="opt_reject_blacklist_stranger_summary">同时拦截黑名单，接受白名单</string>
    <string name="opt_accept_whitelist">只接收白名单里的人</string>
    <string name="opt_reject_all">拦截所有人</string>
    <string name="firewall_action">拦截操作</string>
    <string name="act_call">对于拦截的来电</string>
    <string name="act_hangup_call">屏蔽并放入拦截记录</string>
    <string name="act_hangup_call_summary">屏蔽的来电不会出现在通话记录中</string>
    <string name="act_mute_call">简单静音</string>
    <string name="act_mute_call_summary">不响铃不振动，但依然在通话记录中</string>
    <string name="act_ignore_call">不拦截</string>
    <string name="act_action_reject_reject">屏蔽来电和短信</string>
    <string name="act_action_reject_mute">屏蔽来电，静音短信</string>
    <string name="act_action_reject_accept">屏蔽来电</string>
    <string name="act_action_mute_reject">静音来电，屏蔽短信</string>
    <string name="act_action_mute_mute">静音来电和短信</string>
    <string name="act_action_mute_accept">静音来电</string>
    <string name="act_action_accept_reject">屏蔽短信</string>
    <string name="act_action_accept_mute">静音短信</string>
    <string name="act_action_accept_accept">不拦截</string>
    <string name="act_ms">对于拦截的短信</string>
    <string name="act_del_ms">屏蔽并放入拦截记录</string>
    <string name="act_del_ms_summary">屏蔽的短信不会出现在短信会话中</string>
    <string name="act_mute_ms">简单静音</string>
    <string name="act_mute_ms_summary">不响铃不振动，但依然在短信会话中</string>
    <string name="act_ignore_ms">不拦截</string>
    <string name="fw_menu_new_blacklist_title">添加号码到黑名单</string>
    <string name="fw_menu_new_whitelist_title">添加号码到白名单</string>
    <string name="fw_menu_new_manual">手工添加</string>
    <string name="fw_add_list_title">输入电话号码</string>
    <string name="fw_menu_pick_from_contact">从通话和联系人中选择...</string>
    <string name="fw_menu_remove">删除</string>
    <string name="confirm">确定</string>
    <string name="no">取消</string>
    <string name="fw_clear_blacklist">清空黑名单</string>
    <string name="fw_clear_whitelist">清空白名单</string>
    <string name="fw_restore_ms">恢复到手机短信</string>
    <string name="fw_ms" formatted="false">短信拦截：%s (%d)</string>
    <string name="fw_call" formatted="false">电话拦截：%s (%d)</string>
    <string name="fw_import_blacklist">正在添加黑名单</string>
    <string name="fw_import_whitelist">正在添加白名单</string>
    <string name="fw_blacklist_hint">"把您要拦截的号码添加到这里。
黑名单中的来电和短信默认全部拦截。"</string>
    <string name="fw_whitelist_hint">"把您最信赖的号码添加到这里。
白名单中的来电和短信默认不拦截。"</string>
    <string name="fw_no_effect">防打扰功能没有开启。是否继续？</string>
    <string name="fw_call_muted">来电被静音</string>
    <string name="fw_call_rejected">来电被拦截</string>
    <string name="fw_ms_muted">短信被静音</string>
    <string name="fw_ms_rejected">短信被拦截</string>
    <string name="fw_ms_filtered">短信被过滤</string>
    <string name="fw_ms_imported">短信被导入</string>
    <string name="fw_keyword_list">智能拦截关键词</string>
    <string name="fw_keyword_list_hint">陌生人发给您的短信中出现下列词语就会被拦截。您可一次添加多个，用逗号分开。</string>
    <string name="menu_edit">编辑</string>
    <string name="fw_add_keyword">添加拦截关键词</string>
    <string name="fw_edit_keyword">编辑拦截关键词</string>
    <string name="fw_clear_all_keyword">清空拦截关键词</string>
    <string name="fw_add_keyword_existing">关键词: %s 已经存在</string>
    <string name="member_firewall_log" formatted="false">已拦截: 电话%d, 短信%d</string>
    <string name="clear_all_calllog">清空电话拦截记录</string>
    <string name="clear_all_mslog">清空短信拦截记录</string>
    <string name="calllog">来电</string>
    <string name="firewall_log">拦截记录</string>
    <string name="fw_on">防打扰运行中</string>
    <string name="fw_blocked">已保护您免于打扰</string>
    <string name="fw_blocked_count" formatted="false">替您新拦截了%d个来电%d个短信</string>
    <string name="firewall_settings">防打扰设置</string>
    <string name="remove">移除</string>
    <string name="emptylist_fwlog_call">当前没有来电拦截记录</string>
    <string name="emptylist_fwlog_ms">当前没有短信拦截记录</string>
    <string name="add_button">添加</string>
    <string name="save_button">保存</string>
    <string name="cancel_button">取消</string>
    <string name="add_blacklist">添加号码到黑名单</string>
    <string name="add_whitelist">添加号码到白名单</string>
    <string name="edit_blacklist">修改备注</string>
    <string name="edit_whitelist">修改备注</string>
    <string name="fw_notes_hint">备注（可选）</string>
    <string name="number_add_hint">输入电话号码</string>
    <string name="fw_in_blacklist">号码: %s 已经存在黑名单中</string>
    <string name="fw_in_whitelist">号码: %s 已经存在白名单中</string>
    <string name="fw_import_ms">导入该联系人的所有短信</string>
    <string name="context_call">拨打电话</string>
    <string name="context_ms">发短信</string>
    <string name="context_new_contact">新建联系人</string>
    <string name="context_add_contact">添加到已有联系人</string>
    <string name="check_all">全选</string>
    <string name="check_nothing">全不选</string>
</resources>
