<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/fw_action_settings" android:key="pref_root"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/act_call">
        <miui.preference.RadioButtonPreference android:persistent="false" android:title="@string/act_hangup_call" android:key="call_action_1" android:summary="@string/act_hangup_call_summary" />
        <miui.preference.RadioButtonPreference android:persistent="false" android:title="@string/act_mute_call" android:key="call_action_2" android:summary="@string/act_mute_call_summary" />
        <miui.preference.RadioButtonPreference android:persistent="false" android:title="@string/act_ignore_call" android:key="call_action_3" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/act_ms">
        <miui.preference.RadioButtonPreference android:persistent="false" android:title="@string/act_del_ms" android:key="ms_action_3" android:summary="@string/act_del_ms_summary" />
        <miui.preference.RadioButtonPreference android:persistent="false" android:title="@string/act_mute_ms" android:key="ms_action_2" android:summary="@string/act_mute_ms_summary" />
        <miui.preference.RadioButtonPreference android:persistent="false" android:title="@string/act_ignore_ms" android:key="ms_action_1" />
    </PreferenceCategory>
</PreferenceScreen>
