<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/fw_pattern_settings"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <miui.preference.RadioButtonPreference android:persistent="false" android:title="@string/opt_reject_blacklist" android:key="opt_reject_blacklist" />
    <miui.preference.RadioButtonPreference android:persistent="false" android:title="@string/opt_reject_blacklist_stranger" android:key="opt_reject_blacklist_stranger" android:summary="@string/opt_reject_blacklist_stranger_summary" />
    <miui.preference.RadioButtonPreference android:persistent="false" android:title="@string/opt_accept_whitelist" android:key="opt_accept_whitelist" />
    <miui.preference.RadioButtonPreference android:persistent="false" android:title="@string/opt_reject_all" android:key="opt_reject_all" />
</PreferenceScreen>
