<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
      xmlns:android="http://schemas.android.com/apk/res/android">
        <TextView android:textSize="@dimen/text_font_size_large" android:id="@id/number" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <EditText android:id="@id/number_edit" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:hint="@string/number_add_hint" android:singleLine="true" android:inputType="phone" />
        <EditText android:id="@id/notes" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/fw_notes_hint" android:singleLine="true" android:inputType="text" />
        <LinearLayout android:layout_width="wrap_content" android:layout_height="fill_parent"
          xmlns:android="http://schemas.android.com/apk/res/android">
            <CheckBox android:gravity="center_vertical" android:id="@id/import_ms" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:focusable="false" android:focusableInTouchMode="false" android:visibility="gone" android:clickable="true" android:layout_width="wrap_content" android:layout_height="fill_parent" /> />
<TextView android:textAppearance="@style/TextAppearance.Secondary" android:gravity="center_vertical" android:id="@id/import_ms_text" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/fw_import_ms" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
